[tool.poetry]
name = "yu_library"
version = "0.1.0"
description = ""
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
monthlist = "yu_library.monthlist:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
